tests/ui/type-alias-impl-trait/fallback.stderr
error[E0283]: type annotations needed
  --> $DIR/fallback.rs:25:5
   |
LL | fn unconstrained_foo() -> Wrapper<Foo> {
   |                           ------------ type must be known at this point
LL |     Wrapper::Second
   |     ^^^^^^^^^^^^^^^
   |     |
   |     cannot infer type of the type parameter `T` declared on the enum `Wrapper`
   |     return type was inferred to be `Wrapper<_>` here
   |
   = note: cannot satisfy `_: Copy`
help: consider specifying the generic argument
   |
LL |     Wrapper::<T>::Second
   |            +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
